--- a/src/App.scss
+++ b/src/App.scss
@@ -6,95 +6,27 @@ html>body{
 
 }
 
-
-/* header section that contains the hero iamge and links
- */
  
- .hero-image-cover{
-  background: url(../public/images/imagea.png)30% 35%/cover no-repeat;
-  min-height:70vh;
-  height:auto;
-  display:grid;
-  grid-template-columns: repeat(2, auto);
-  gap: 12rem !important;
-  min-width: 100vw;
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  padding-left: 2rem !important;
-  z-index: 100 !important;
-  @media(max-width:600px){
-    height:auto !important;
-   padding-bottom:1rem !important;
-  }
-}
-.hero-card-body{
-  .welcome-title{
-    color:aliceblue !important;
-    font-size: 2.5rem;
-    text-shadow: offset-x offset-y blur-radius color;
-    text-shadow: 5px 5px 5px rgb(5, 4, 4);
-    .To{ font-size: 1.5rem;}
-}
-.card-title-span{
-  color:aliceblue !important;
-  text-shadow: offset-x offset-y blur-radius color;
-  text-shadow: 5px 5px 5px rgb(5, 4, 4);
-}
-}
-@media(max-width:992px){
-  .hero-card-body{
-    z-index: 10;
-    .sp{font-size: 1.6rem;}
-    }
-}
-
-.hero-image-inner-item{
-  margin-top: 2rem !important;
-   z-index: -4;
-;& .ogene{
-transform: scale(1.3);
-z-index:2 !important;
-position:absolute;
-left:5rem;
-top:3rem !important;
-
-}
-;& .logo{
-  left:11rem;
-  top:2rem;
-  max-height:12rem !important;
-  max-width:12rem !important;
-  transform:scale(2, 2);
-  background:black;
-  z-index:-1 !important;
-   
-  -webkit-box-shadow: #FFF 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px, 5px 5px 15px 5px rgba(0,0,0,0); 
-box-shadow: #FFF 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px, 5px 5px 15px 5px rgba(0,0,0,0);
-}
-;& img{
-
-  margin-top:6rem;
-  transform:translateX(-5rem);
- /*  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px; */
-}
-}
 /* TEAM SECTION STYLING STARTS HERE
  */
 .team{
-  background:url(../public/images/lightBlue.jfif)center center/cover no-repeat;
+  background:#ECAD7F;
+  background:url(../public/images/purple7.jpg)center/cover no-repeat;
   padding-bottom: 2%;
 /*   box-shadow: 0 0 10px 5px;
  */  
     ;& h4, p{ 
-     color:white !important;
+     color:#ECAD7F !important;
      text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
+     font-weight: 500;
   }
-
 
 .Team .T-title,
 .team-position {
   font-size: 1rem !important;
   text-align: center !important;
-  color:#FFFFFF;
+  color:#ECAD7F;
+  font-weight: 700;
   ;
 
   &:not(p) {
@@ -111,9 +43,79 @@ box-shadow: #FFF 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px
     visibility: visible;
   }
 }
-/*   team section stop here  and search links starts
- */
-.searches{
+
+
+/* Styling Footer content */
+
+.video-container .caption {
+  z-index: 1;
+  position: relative;
+  text-align: center;
+  color: #dc0000;
+  padding: 10px;
+}
+@media only screen and (max-width: 992px) {
+  #section-1 {
+    transform: translateY(-5%) !important;
+  }
+  .section-2-box {
+    margin-top: 4rem !important;
+  }
+}
+.footers{
+  background-color: #743B7A !important;
+ background: url(../public/images/purple11.jpg)center center/cover no-repeat; 
+ padding-top:5rem !important;
+}
+.last-footer{
+  background: url(../public/images/purple14.jpg)center center/cover no-repeat; 
+  color: #ECAD7F;
+  font-weight:600; 
+  max-height:100px !important;
+  
+}
+ /* border: 2px solid #1e154e,
+  border-radius:10px; 
+  background:ECAD7F;
+  color:'#1e154e;
+   font-weight:600; */
+
+
+
+.media{
+position:relative
+;& .socials{
+border: 1px solid #ECAD7F;
+padding: 1rem;
+margin-top: 2rem;
+;& a{
+margin-left: 1%;
+padding-left: 2rem;
+font-size: 2rem;
+box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+ rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+ rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, 
+ rgba(0, 0, 0, 0.06) 0px 2px 1px, 
+ rgba(0, 0, 0, 0.09) 0px 4px 2px,
+ rgba(0, 0, 0, 0.09) 0px 8px 4px, 
+ rgba(0, 0, 0, 0.09) 0px 16px 8px, 
+ rgba(0, 0, 0, 0.09) 0px 32px 16px;
+
+;& i{
+  color: #ECAD7F;
+  margin-right: 3%;
+  position: relative;
+  right:1rem;
+   }
+  }
+}  
+;& h3{
+margin-top: 2rem;
+}
+}
+
+ /*   team section stop here  and search links starts
+  .searches{
   min-width: 18rem;
   border-bottom: 2px solid rgb(222, 219, 219);
   border-left: none;
@@ -175,54 +177,4 @@ object-fit: cover;
 z-index: 0;
 
 }
-
-/* Styling Footer content */
-.video-container .caption {
-  z-index: 1;
-  position: relative;
-  text-align: center;
-  color: #dc0000;
-  padding: 10px;
-}
-@media only screen and (max-width: 992px) {
-  #section-1 {
-    transform: translateY(-5%) !important;
-  }
-  .section-2-box {
-    margin-top: 4rem !important;
-  }
-}
-.footers{
-  background-color: aqua !important;
-  background: url(../public/images/backimage1.jpg)center center/cover no-repeat;
-}
-.cover-footer{
-background: rgba(78, 58, 195, 0.5);
- margin-top: 0% !important;
-}
-.media{
-position:relative
-;& .socials{
-border: 1px solid lightgray;
-padding: 1rem;
-margin-top: 2rem;
-;& a{
-margin-left: 1%;
-padding-left: 2rem;
-font-size: 2rem;
-box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-
-;& i{
-  color: #fdfcff;
-  margin-right: 3%;
-  position: relative;
-  right:1rem;
-  
-}
-}
-}
-;& h3{
-margin-top: 2rem;
-}
-}
-
+*/
