--- a/src/Body.scss
+++ b/src/Body.scss
@@ -1,145 +1,19 @@
-/*my team section here */       
+  
      .About{
       z-index:10;
      }  
        
-/*dropdown cover section here */  
-/* list bit of dropdown code*/  
-.dropdownCover{
-  min-height:80px;
-  max-height:80px;
-  position:fixed;
-  min-width: 100vw !important;
-  z-index:1000 !important;
-  padding:none !important;
-  margin:none;
-  background:transparent;
- .offcanvas-cover{
-  background-color: #072448;
-  color:#f56038;
-  .offcanvas-header{
-    h3{
-      font-family: 'Bebas Neue', cursive;
-      color:white;
-      transform:translateX(50%)
-    }
-  }
-    
-  }
- 
- .btn-close{color:white !important}
-}
-      
-.dropdownCover.active{
-background:#15BAB3;
-@media(max-width:786px){
-  max-height: 60px !important;
-  min-height:60px !important;
-  background: rgba(0, 0, 0, 0.8)  !important;
-  border-bottom: 1px solid #d59253;
 
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, 
-rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
-rgba(0, 0, 0, 0.8) 0px -79px 40px 0px inset,
-rgba(0, 0, 0, 0.09) 0px 2px 1px, 
-rgba(0, 0, 0, 0.09) 0px 4px 2px, 
-rgba(0, 0, 0, 0.09) 0px 8px 4px,
-rgba(0, 0, 0, 0.09) 0px 16px 8px,
-rgba(0, 0, 0, 0.09) 0px 32px 16px;
-}
-  /* -webkit-box-shadow: 0px 0px 0px 5px #A0A0A0, inset 0px 10px 27px -8px #141414, inset 0px -10px 27px -8px #A31925, 5px 5px 15px 5px rgba(0,0,0,0); 
-box-shadow: 0px 0px 0px 5px #A0A0A0, inset 0px 10px 27px -8px #141414, inset 0px -10px 27px -8px #A31925, 5px 5px 15px 5px rgba(0,0,0,0); */
-  /* #02231c */
-  & .navbars{
-    border-bottom:none !important;
-    box-shadow: none !important;
-    padding-top:1.3%;
-    min-width: 700px;
-    & h2, .dropIcon{
-      color:#002b4a !important;
-    }
-    & .menu-text>.menus{
-      display:none;
-    } 
-    & .activity-text{
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
-      visibility: visible !important;
-      color:#002b4a !important;
 
-      top:-1.2rem !important;
-      left:-10rem !important;
-      min-width: 100vw !important;
-      @media(max-width:786px){
-        visibility: hidden !important;
-      }
-    }
-  .dropIcon{
-    transform:translateX(9rem) !important;
-
-  }
-  .row-auto{min-width:50vw;}
-  .row{min-width:30vw;}
-  .navbar-links {visibility: visible !important;
-    color:#002b4a !important; 
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight:900;
-
-  }
-  }
-}
-/*------------------WHAT WE DO  SECTION------------------------------*/
-.what-we-do-title{
- box-sizing: border-box;
- display: flex; 
- position:relative; 
- padding:1rem; 
- min-width:100vw;
- min-height:80px !important;
- max-height:80px !important;
- font-weight: 900 !important; 
- overflow:hidden;
-
- h3{
- color:rgb(240, 250, 240) !important;
- font-size: 2rem;
- text-shadow: 2px 2px 10px rgb(10, 9, 9); 
- z-index: 10;
- width:100%;
- text-align: center;
- padding: 1%;
- }
- video{
- 
-  width:100% !important;
-  min-height:100px;
-  position:absolute;
-  top:-10rem ;
-  left:0;
-  right:0;
-  @media(max-width:786px){
-    top:-8rem !important;
-  }
-  @media(max-width:540px){
-    top:-5rem !important;
-  }
-}
-
-}
-
-    .what-we-do-title::before{
-       position:absolute; 
-        width:100%; height:100%;top:0;
-        left:0;bottom:0; right:0;
-        content:""; background:black;
-        opacity: 0.7; z-index: 2;
-    }
         /*----------------Section Language------------------------------*/
 
 
         .languages{min-width:100%;
             min-height:40vh;
-             height:auto !important; 
-            background: rgb(175, 175, 248);
+             height:auto !important;
+             background: url(../public/images/purple13.jpg)center/cover no-repeat;
+        
+            /* background: rgb(175, 175, 248); */
           }
           .language-inner{width:100%; height:auto;}
          
@@ -147,80 +21,107 @@ box-shadow: 0px 0px 0px 5px #A0A0A0, inset 0px 10px 27px -8px #141414, inset 0px
                url(../public/images/alidiKids.jpg)50% 42%/cover no-repeat; width:100vw; height:100px;
                display:flex; align-items: flex-start; justify-content:flex-end;
               }
-          /*   
-          .sub-head {background:url(../public/images/images8.jpg)50% 42%/cover no-repeat; width:100vw; height:100px; line-height: 100px;
-               display:flex; align-items: center;justify-content: center; 
-              } */
+         
           
               .sub-head h3{width:80%;         margin-bottom:0.5rem;
                height:100%; line-height: 25px;transform: translatey(-300%);
                font-family: garamond; font-weight: 700;}
-               .lead{transform: translate(34%, -45%);}
+               .lead{transform: translate(30%, -45%);
+                font-size:13.5px !important;
+                color:rgba(250, 250, 6, 0.984) !important;
+                letter-spacing: 1px;
+                line-height: 12.5px;
+              }
 
           
-               /*-------------------------Language Section---------------------*/
-          
-          .language-container { width:100vw; height:auto;
-                  padding: 2rem 5rem;
-                }
+          .language-container 
+          { 
+            width:100vw; height:auto;
+            padding: 2rem 5rem;
+            @media(max-width:992px){
+             .column-33,
+             .column-66{
+             width: 100vw !important;
+            }
+            .large-font{
+              font-size: 40px !important;
+             }
+            }
+          @media(max-width:786px){
+          padding: 2rem 3rem;
+          .column-66,
+          .column-33 {
+          width: 100vw !important;
+         .large-font{
+          font-size: 1.6rem !important;
+         }
+         .button {
+          transform:translateY(7%);
+          padding: 10px 20px;
+          font-size: 13px;
+          border-radius: 8px;
+          font-weight: 400;
+        }
+        .page{
+          line-height: 27px;
+          width:100vw !important;
+          text-align: left !important;
+          padding-right: 5rem !important;
+          padding-bottom: 5% !important;
+          margin: -3% !important;
+          }
+        } 
+      }
+    }
                 
-                .lang-row:after {
-                  content: "";
-                  display: table;
-                  clear: both
-                }
-                
-                .column-66 {
-                  float: left;
-                  width: 60%;
-                  padding: 20px;
-                }
-                
-                .column-33 {
-                  float: left;
-                  width: 40%;
-                  padding: 40px;
-                  margin-top: 3%;
-                }
-                iframe{border-radius: 5px;}
-                
-                .large-font {
-                  color:#009900;
-                  font-size: 46px;
-                  font-family: Arial, Helvetica, sans-serif;
-                  @media(max-width:786px){
-                  font-size: 2rem;
-                  border-radius: 5px;
-                    }
-                }
-                .page{
-                 font-size:1rem;
-                 font-family:sans-serif;
-                 line-height: 26px;
-                 }
+    .lang-row:after {
+      content: "";
+      display: table;
+      clear: both
+    }
+    
+    .column-66 {
+      float: left;
+      width: 60%;
+      padding: 20px;
+      }
+    
+    .column-33 {
+      float: left;
+      width: 40%;
+      padding: 40px;
 
-                .xlarge-font {
-                  
-                  font-size: 24px;
-                   @media(max-width:786px){
-                    border-radius: 5px;
-                    font-weight: 600;
-                    }
-                  
-                }
-                
-                .button {
-                  border: none;
-                  color: white;
-                  padding: 14px 28px;
-                  font-size: 16px;
-                  cursor: pointer;
-                  background-color: #009900;
-                  border-radius: 5px;
-                  font-weight: 600;
-               
-                }
-                
+    }
+    iframe{border-radius: 5px;}
+    
+    .large-font {
+      color:#1e1245;
+      font-size: 43px;
+      padding-bottom: 1rem;
+      font-weight:800;
+    
+    }
+    .page{
+      font-size:1rem;
+      line-height: 30px;
+      font-family: 'Open Sans', sans-serif;
+      font-weight:300;
+      color: #1e1245 !important;
+
+      }
+         
+      .button {
+        border: none;
+        color: #1e1245;
+        padding: 14px 28px;
+        font-size: 16px;
+        cursor: pointer;
+        background-color: #ECAD7F;
+        border-radius: 5px;
+        font-weight: 700;
+      
+      }
+      
       .head .lead {
         z-index: 10;
         color: white;
@@ -235,12 +136,7 @@ box-shadow: 0px 0px 0px 5px #A0A0A0, inset 0px 10px 27px -8px #141414, inset 0px
         }
       }
                 
-      @media screen and (max-width: 1000px) {
-        .column-66,
-        .column-33 {
-          width: 100%;
-          text-align: center;
-        }
+      @media screen and (max-width: 786px) {
         
     }
 
@@ -248,7 +144,17 @@ box-shadow: 0px 0px 0px 5px #A0A0A0, inset 0px 10px 27px -8px #141414, inset 0px
  /*  font-family: 'Anton', sans-serif;
   font-family: 'Arvo', serif;
   font-family: 'Bebas Neue', cursive;
-  font-family: 'Lobster', cursive; */
+  font-family: 'Lobster', cursive; *
+  font-family: 'Open Sans', sans-serif;
+font-family: 'Poppins', sans-serif;
+font-family: 'PT Sans', sans-serif;
+font-family: 'Raleway', sans-serif;
+font-family: 'Roboto', sans-serif
+  
+  
+  
+  
+  /
 
 /*   NativeFood Cards styling contents */
 .food-cover{
@@ -258,57 +164,136 @@ box-shadow: 0px 0px 0px 5px #A0A0A0, inset 0px 10px 27px -8px #141414, inset 0px
   justify-items:center;
   align-items: center;
   padding: 2rem !important;
-  .cards-body{
-    background: #444;
-    color:whitesmoke;
-    max-height:280px !important;
-    min-height:280px !important;
+  @media(max-width:992px){
+    .significant-items{
+    
+      padding:3% 0 3% 0!important;
+    }
   }
-}
+
+  .cards-body{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    padding: 8% 5% !important;
+    color:rgb(5, 5, 5);
+    max-height:200px !important;
+    min-height:200px !important;
+    margin-top: -6rem !important;
+
+    @media(max-width:992px){
+      padding: 7% 5% 3%!important;
+      
+      }
+      
+      @media(max-width:786px){
+      margin-top: -7rem !important;
+      }
+     }
+  }
 
 .pammy-img{
   width:100%;
-  height:350px;
+  transform:rotateX(-60deg) !important;
+  height:370px;
   background: url(../public/images/pammy.jpg)35% 45%/cover no-repeat;
 }
 .Nqwobi-img{
   width:100%;
-  height:350px;
+  height:370px;
+  transform:rotateX(-60deg) !important;
   background: url(../public/images/nqwobi.jpg)35% 45%/cover no-repeat;
 }
 .abacha-img{
   width:100%;
-  height:350px;
+  transform:rotateX(-60deg) !important;
+  height:370px;
   background: url(../public/images/abacha.jpg)35% 45%/cover no-repeat;
 }
 .oji-img{
   width:100%;
-  height:350px;
+  transform:rotateX(-60deg) !important;
+  height:370px;
   background: url(../public/images/ojiOse.jpg)35% 45%/cover no-repeat;
+}
+.pammy-img,
+.oji-img,
+.abacha-img,
+.Nqwobi-img
+{
+margin-top: -5.4rem !important;
+box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+ rgba(0, 0, 0, 0.12) 0px -12px 30px,
+  rgba(0, 0, 0, 0.12) 0px 4px 6px,
+   rgba(0, 0, 0, 0.17) 0px 12px 13px,
+ rgba(0, 0, 0, 0.09) 0px -3px 5px;
+ @media(max-width:992px){
+  margin-top: -7rem !important;
+  }
 }
 @media(max-width:992px){
   .pammy-img,
   .oji-img,
   .abacha-img,
   .Nqwobi-img{
-   height:450px;
+   height:450px
   }
 }
-@media(max-width:786px){
-  .pammy-img,
-  .oji-img,
-  .abacha-img,
-  .Nqwobi-img{
-   height:550px;
+
+
+
+/*------------------WHAT WE DO  SECTION------------------------------*/
+.what-we-do-title{
+  box-sizing: border-box;
+  display: flex; 
+  position:relative; 
+  padding:1rem; 
+  min-width:100vw;
+  min-height:80px !important;
+  max-height:80px !important;
+  font-weight: 900 !important; 
+  overflow:hidden;
+ 
+  h3{
+  color:rgb(240, 250, 240) !important;
+  font-size: 2rem;
+  text-shadow: 2px 2px 10px rgb(10, 9, 9); 
+  z-index: 10;
+  width:100%;
+  text-align: center;
+  padding: 1%;
   }
-}
-/*   NativeFood Cards styling contents */
-.what-we-do-cover{
+  video{
+  
+   width:100% !important;
+   min-height:100px;
+   position:absolute;
+   top:-10rem ;
+   left:0;
+   right:0;
+   @media(max-width:786px){
+     top:-8rem !important;
+   }
+   @media(max-width:540px){
+     top:-5rem !important;
+   }
+ }
+ 
+ }
+ 
+   .what-we-do-title::before{
+    position:absolute; 
+    width:100%; height:100%;top:0;
+    left:0;bottom:0; right:0;
+    content:""; background:black;
+    opacity: 0.7; z-index: 2;
+  }
+  .what-we-do-cover{
   .cards-body{
-    background: #444;
-    color:whitesmoke;
+    background: #f2f2f2;
+    color:#000009;
     max-height:240px !important;
-    min-height:240px !important;
+    min-height:150px !important;
+    padding:1rem 2rem !important;
   }
 }
 
@@ -332,19 +317,30 @@ box-shadow: 0px 0px 0px 5px #A0A0A0, inset 0px 10px 27px -8px #141414, inset 0px
   height:200px;
   background: url(../public/images/charity.jpg)35% 45%/cover no-repeat;
 }
-@media(max-width:992px){
-  .pammy-img,
-  .oji-img,
-  .abacha-img,
-  .Nqwobi-img{
-   height:450px;
-  }
-}
 @media(max-width:786px){
-  .pammy-img,
-  .oji-img,
-  .abacha-img,
-  .Nqwobi-img{
-   height:550px;
+  .integration-img,
+  .Equality-img,
+  .Charity-img{
+    position:relative;
+    height:300px !important;
+    background-position-y:10% ;
+  }
+  .Volunteering-img{
+    position:relative;
+    background-position-y:30% ;
+    height:300px !important;
+
   }
 }
+@media(max-width:550px) and (min-width:320px){
+  .Volunteering-img{
+    background-position-y:35% ;
+    height:300px !important;
+
+  }
+}
+
+
+
+
+
