--- a/src/Mediaquery.scss
+++ b/src/Mediaquery.scss
@@ -92,6 +92,17 @@
 
 
 /*About us media query  starts here*/
+.envous-culture{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 600;
+    
+
+}
+.reg-btn{
+    background:#40336B;
+    color: #f2f2f2;    
+    font-weight: 400;
+}
 .left-aside{
     box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
     padding-right:5%;
@@ -102,7 +113,6 @@
 }
 @media(max-width:960px){
 .about-us{
-
 display:flex;
 flex-direction: column;
 padding: 0 2rem;
@@ -111,21 +121,13 @@ min-width:100% !important;
 max-width: 100% !important;
 }
 ;& .title{
-    color: #1e154e;
+ 
     font-weight: 600;
     font-size: 1.7rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-.reg-btn{
-    background: rgb(125, 118, 92) !important;
-    color: white;    
-    font-weight: 400;
-}
-.envous-culture{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #1e154e;
-    font-weight: 600;
-}
+
+
 }
 
 }/*What we Do  media query  starts here*/
