--- a/src/Body.scss
+++ b/src/Body.scss
@@ -1,10 +1,5 @@
   
-     .About{
-      z-index:10;
-     }  
-       
-
-
+    
         /*----------------Section Language------------------------------*/
 
 
@@ -60,7 +55,8 @@
           padding: 10px 20px;
           font-size: 13px;
           border-radius: 8px;
-          font-weight: 400;
+          font-weight: 700;
+          border:1px solid #1e1245;
         }
         .page{
           line-height: 27px;
@@ -105,8 +101,8 @@
       font-size:1rem;
       line-height: 30px;
       font-family: 'Open Sans', sans-serif;
-      font-weight:300;
-      color: #1e1245 !important;
+      font-weight:400;
+      color: #070317 !important;
 
       }
          
@@ -248,7 +244,7 @@ box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
   position:relative; 
   padding:1rem; 
   min-width:100vw;
-  min-height:80px !important;
+  min-height:90px !important;
   max-height:80px !important;
   font-weight: 900 !important; 
   overflow:hidden;
@@ -270,15 +266,22 @@ box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
    top:-10rem ;
    left:0;
    right:0;
+  }
    @media(max-width:786px){
+    video{
      top:-8rem !important;
    }
+   min-height:120px !important;
+   max-height:120px !important;
+   h3{padding-top:4% !important}
+  }
    @media(max-width:540px){
+    video{
      top:-5rem !important;
    }
  }
  
- }
+}
  
    .what-we-do-title::before{
     position:absolute; 
