--- a/src/Header.scss
+++ b/src/Header.scss
@@ -10,10 +10,12 @@
     clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
     padding-left: 2rem !important;
     z-index: 100 !important;
-    @media(max-width:600px){
+    background-attachment: fixed !important;
+   
+    @media(max-width:786px){
       min-height:80vh;
       height:auto !important;
-     padding-bottom:1rem !important;
+     padding-top:1rem !important;
     }
   }
   .hero-card-body{
@@ -46,6 +48,9 @@
   position:absolute;
   left:5rem;
   top:3rem !important;
+  object-fit: cover;
+  background-attachment: fixed !important;
+
   
   }
   ;& .logo{
@@ -56,6 +61,8 @@
     transform:scale(2, 2);
     background:black;
     z-index:-1 !important;
+    object-fit: cover !important;
+    background-attachment: fixed !important;
      
     -webkit-box-shadow: #FFF 0 -1px 4px,
       #ff0 0 -2px 10px, #ff8000 0 -10px 20px,
@@ -108,7 +115,6 @@
 .dropdownCover.active{
  background:url(../public/images/purple11.jpg)center/cover no-repeat;
 
- 
   & .navbars{
     border-bottom:none !important;
     box-shadow: none !important;
