--- a/src/App.scss
+++ b/src/App.scss
@@ -68,16 +68,16 @@ html body{
   justify-content:center;
   align-items:center;
   padding-bottom: 4rem !important;
+  @media(max-width:560px) and (min-width:320px){
+    padding-bottom: 5rem !important;
   }
-  
+  }
 }
  /* border: 2px solid #1e154e,
   border-radius:10px; 
   background:ECAD7F;
   color:'#1e154e;
-   font-weight:600; */
-
-
+  font-weight:600; */
 
 .media{
 position:relative
@@ -111,4 +111,59 @@ margin-top: 2rem;
 }
 }
 
- 
+.modes>.nextButton,.modes,.modehead, .modet{
+background-color: #dc0000 !important;
+}
+
+
+.btn-login {
+  font-size: 0.9rem;
+  letter-spacing: 0.05rem;
+  padding: 0.75rem 1rem;
+  border:none !important;
+}
+
+.btn-google {
+  color: white !important;
+  background-color: #ea4335;
+  border:none !important;
+}
+
+.btn-facebook {
+  color: white !important;
+  background-color: #3b5998;
+}
+
+
+.reg-btn:hover {
+  background-color: dimgray;
+  color: white;
+}
+
+
+.minutes{
+display:flex;
+flex-wrap: wrap;
+justify-content: space-between;
+}
+
+/*---------MEDIA Querry-------*/
+.nextButton {border:none !important}
+
+@media only screen and (max-width: 992px) {
+  #section-1 {
+    transform: translateY(-5%) !important;
+  }
+  .section-2-box {
+    margin-top: 4rem !important;
+  }
+}
+@media only screen and (max-width: 786px) {
+  .header h1 {
+    font-size: 14px !important;
+    word-spacing: 2px !important;
+    letter-spacing: 0;
+  }
+}
+.modes{background: url(../public/images/bookBG.PNG)center/cover no-repeat;
+}
