--- a/src/Mediaquery.scss
+++ b/src/Mediaquery.scss
@@ -100,7 +100,6 @@
     }
     @media(max-width:875px){
 .igbo-value,
-.pen,
 .join,
 .must,
 .child,
@@ -121,15 +120,11 @@ display:none !important;
     margin-left: 5%;
 }
      
-.envous-culture{
+.culture-title{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 600;
 }
-.reg-btn{
-    background:#40336B;
-    color: #f2f2f2;    
-    font-weight: 400;
-}
+
 .left-aside{
     box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
     padding-right:5%;
@@ -174,25 +169,35 @@ max-width: 100% !important;
     background:#40336B;
     color: #f2f2f2;    
     font-weight: 600;
-    max-width:150px !important;
+    max-width:190px !important;
     display:flex;
     align-items: center;
     justify-content: center;
     padding: 4% 0;
-    margin-left: 5%;
+    padding-right:1rem;
+    margin-left: 9%;
+    & .pen{position: absolute;
+        margin-left:10rem !important}
 }
-.envous-culture{
+.text>h5{
+    min-width:100%;
+    position:relative !important;
+    & .thumbup{
+        font-size: 4.5rem !important;
+        color:lightslategray !important;
+        position: absolute !important;
+        top:-1.7rem !important;
+        left: -1.3rem !important;
+    }
+   
+}
+.culture-title{
     font-weight: 700;
     font-size:1.3rem !important;
     min-width:100% !important;
    /*  position: absolute;  */
 }
-.thumpup{
-    position:absolute;
-    color:white !important;
-    left:50%;
-    opacity:90;
-}
+
 
 }
 
