--- a/src/Mediaquery.scss
+++ b/src/Mediaquery.scss
@@ -208,7 +208,7 @@ max-width: 100% !important;
     background:#40336B;
     color: #f2f2f2;    
     font-weight: 600;
-    max-width:190px !important;
+    width:auto !important;
     display:flex;
     align-items: center;
     justify-content: center;
