--- a/src/Mediaquery.scss
+++ b/src/Mediaquery.scss
@@ -109,14 +109,16 @@ display:none !important;
     }
    }  
    .reg-btn{
-    background:#ccc !important;
-    color: #40336B;
-    font-weight: 600;
-    max-width:300px !important;
-    display:flex;
+    background:#A6A6A6 !important;
+    color: #170e35 !important;
+    display: flex;
     align-items: center;
-    justify-content: center;
-    padding: 1% 0 1% 2%;
+    justify-items: center;
+    font-weight: 600;
+    min-width: 260px;
+    width:auto;
+    padding: 1.5% 0 1.5%  5% !important;
+
    border:none !important;
    outline:none !important;
    & :hover{
@@ -129,22 +131,37 @@ display:none !important;
     box-shadow: none !important;
     border:none !important
 }
-.close:focus, .close:hover {
-    outline: none;
-    cursor: pointer;
- }
-  
-    
+@media(max-width:875px){
+    min-width: 200px;
+    font-weight: 600;
+   & .pen{position: absolute;
+        margin-left:8rem !important
+    } 
+}   
+@media(max-width:786px){
+    min-width: 200px;
+    font-weight: 600;
+    padding: 1.5% 0 1.5%  0% !important;
+    display: block;
+    margin-left: -1rem;
+   & .pen{position: absolute;
+        margin-left:8rem !important
+    } 
+}   
 }
 
 .reg2-btn{
-    
-  padding: 1% 0 1% 2%;
-   border:none !important;
-   outline:none !important;
+color:white; 
+background: #294849; 
+border:3px solid #ccc;
+border-radius:15px;
+box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+padding: 2% 3rem;
+outline:none !important;
    & :hover{
-    border:none !important;
     box-shadow: none !important;
+    outline:none !important
    } 
 & :focus{
     outline:none !important;
@@ -155,13 +172,13 @@ display:none !important;
     outline: none;
     cursor: pointer;
  }
-  
-    
+ 
 }
      
 .culture-title{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 600;
+    
 }
 
 .left-aside{
@@ -174,6 +191,10 @@ display:none !important;
 }
 
 @media(max-width:786px){
+  .horrizontal{
+    display:none !important;
+  }
+    
 .about-us{
 display:flex;
 flex-direction: column;
@@ -186,6 +207,10 @@ padding:0 5%;
 ;& .right-aside, .left-aside{
 min-width:100% !important;
 max-width: 100% !important;
+}
+& .left-aside{
+    padding-left:0 !important;
+
 }
 ;& .title{
     font-weight: 600;
@@ -204,36 +229,14 @@ max-width: 100% !important;
   font-size: 1.1rem !important;
 }
 
-.reg-btn{
-    background:#40336B;
-    color: #f2f2f2;    
-    font-weight: 600;
-    width:auto !important;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    padding: 4% 0;
-    padding-right:1rem;
-    margin-left: 9%;
-    & .pen{position: absolute;
-        margin-left:10rem !important}
-}
-.text>h5{
-    min-width:100%;
-    position:relative !important;
-    & .thumbup{
-        font-size: 4.5rem !important;
-        color:lightslategray !important;
-        position: absolute !important;
-        top:-1.7rem !important;
-        left: -1.3rem !important;
-    }
-   
-}
+
+
 .culture-title{
     font-weight: 700;
     font-size:1.3rem !important;
     min-width:100% !important;
+    position: absolute !important;
+    left:0;
    /*  position: absolute;  */
 }
 
