--- a/src/Header.scss
+++ b/src/Header.scss
@@ -176,11 +176,20 @@
   }
 }
 
-
-
+.offcanvas-cover{
+  @media(max-width:786px){
+    .buttons{
+    transform:translateY(100%)!important}
+  }
+}
+h3{
+  font-size:2.5rem !important;
+  margin-left:-2rem !important;
+}
 
 .spancover{
     box-sizing: border-box;
+    
 }
 .links{
     box-sizing: border-box;
