--- a/src/Header.scss
+++ b/src/Header.scss
@@ -17,6 +17,10 @@
       height:auto !important;
      padding-top:1rem !important;
     }
+    .horrizontal{
+      display:none !important;
+    }
+
   }
   .hero-card-body{
     .welcome-title{
@@ -182,7 +186,8 @@
     transform:translateY(100%)!important}
   }
 }
-h3{
+.offcanvas-title
+{
   font-size:2.5rem !important;
   margin-left:-2rem !important;
 }
