--- a/src/Body.scss
+++ b/src/Body.scss
@@ -238,6 +238,13 @@ box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
 
 
 /*------------------WHAT WE DO  SECTION------------------------------*/
+.what-we-do-cover{
+  padding-bottom: 5rem !important;
+  .what-we-do-content{
+  padding-top: 3rem !important;
+
+  }
+}
 .what-we-do-title{
   box-sizing: border-box;
   display: flex; 
@@ -289,13 +296,13 @@ box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     left:0;bottom:0; right:0;
     content:""; background:black;
     opacity: 0.7; z-index: 2;
-  }
+   }
   .what-we-do-cover{
   .cards-body{
     background: #f2f2f2;
     color:#000009;
-    max-height:240px !important;
-    min-height:150px !important;
+    max-height:300px !important;
+    min-height:300px !important;
     padding:1rem 2rem !important;
   }
 }
